WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144349
Fix common typo "targetting" => "targeting"
https://bugs.webkit.org/show_bug.cgi?id=144349
Summary
Fix common typo "targetting" => "targeting"
Joseph Pecoraro
Reported
2015-04-28 12:55:48 PDT
* SUMMARY Fix common typo "targetting" => "targeting". Showed up in an error string and a bunch of comments.
Attachments
[PATCH] Proposed Fix
(6.15 KB, patch)
2015-04-28 12:56 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(6.66 KB, patch)
2015-04-28 12:57 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-04-28 12:56:35 PDT
Created
attachment 251879
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 2
2015-04-28 12:57:37 PDT
Created
attachment 251880
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2015-04-28 13:46:22 PDT
Comment on
attachment 251880
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 251880 Committed
r183506
: <
http://trac.webkit.org/changeset/183506
>
WebKit Commit Bot
Comment 4
2015-04-28 13:46:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug